# kodama

./: .gitignore  CMakeLists.txt  readme.MD
design/: ideas.md  type_inference.md
design/control_flow/: conditionals.md  loops.md
design/data_types/: compounds.md  scalars.md
design/operators/: arithmetic.md  assignment.md  bitwise.md  logical.md  others.md  relational.md
grammar/: dataType.cfgr  kodama.cfgr  operators.cfgr  terminal.cfgr
kodama/: code.kdm  code.ll  main.cpp
kodama/analyzer/: semanticValidator.cpp  semanticValidator.hpp
kodama/analyzer/type/: datatype.cpp  datatype.hpp  typeChecker.cpp  typeChecker.hpp  typeInference.cpp  typeInference.hpp
kodama/ast/: ast.cpp  ast.hpp  astVisitor.cpp  astVisitor.hpp
kodama/cli/: cli.cpp  cli.hpp
kodama/codegen/: codegen.cpp  codegen.hpp  irtransform.cpp  irtransform.hpp
kodama/compiler/: compiler.cpp  compiler.hpp
kodama/errors/: error.cpp  error.hpp  errorFactory.cpp  errorFactory.hpp
kodama/lexer/: lexer.cpp  lexer.hpp  token.hpp
kodama/parser/: parser.cpp  parser.hpp
kodama/test/: testUtils.cpp  testUtils.hpp
kodama/test/analyzer/: semanticValidatorTests.cpp
kodama/test/codegen/: codegentests.cpp
kodama/test/integration/: codegentests.cpp
kodama/test/lexer/: lexerTests.cpp
kodama/test/lit/: .lit_test_times.txt  01-pass.c  default.profraw  lit.cfg  minimal.itest  test.kdm
kodama/test/parser/: assignmentTests.cpp  binaryOperationTests.cpp  exceptionTests.cpp  functionTests.cpp  functions.cpp  primaryTests.cpp  statementTests.cpp  unaryTests.cpp
kodama/utils/: fileUtils.cpp  fileUtils.hpp  stringUtils.hpp
src/: code.kdm  main.cpp  memoryUtils.hpp  utils.hpp
src/analyzer/: semanticValidator.cpp  semanticValidator.hpp  typeChecker.cpp  typeChecker.hpp
src/analyzer/type/: datatype.cpp  datatype.hpp  typeChecker.cpp  typeChecker.hpp  typeInference.cpp  typeInference.hpp
src/ast/: ast.cpp  ast.hpp  astVisitor.cpp  astVisitor.hpp  datatypes.cpp  datatypes.hpp
src/codegen/: codegen.cpp  codegen.hpp  irtransform.hpp
src/errors/: error.cpp  error.hpp  errorFactory.cpp  errorFactory.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/parser/: parser.cpp  parser.hpp
src/utils/: stringUtils.cpp  stringUtils.hpp
test/: parserTests.cpp  test.cpp
test/parser/: functions.cpp
